--- a/projects/host-app/src/app/app.component.html
+++ b/projects/host-app/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div>
   <h2>{{title}} is running</h2>
+  <button type="button" class="btn btn-success">Test</button>
 </div>
+
 <router-outlet></router-outlet>
