--- a/projects/host-app/src/app/app.component.html
+++ b/projects/host-app/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div>
   <h2>{{title}} is running</h2>
-  <button type="button" class="btn btn-success">Test</button>
+  <a [routerLink]="['/products']" class="btn btn-primary">Products</a>
+  <a [routerLink]="['/']" class="btn btn-primary">Home</a>
 </div>
 
 <router-outlet></router-outlet>
