Load all Micro-Frontends in host-app

--- a/projects/host-app/src/app/app.component.html
+++ b/projects/host-app/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div>
   <h2>{{title}} is running</h2>
   <a [routerLink]="['/products']" class="btn btn-primary">Products</a>
+  <a [routerLink]="['/carts']" class="btn btn-primary">Carts</a>
+  <a [routerLink]="['/orders']" class="btn btn-primary">Orders</a>
   <a [routerLink]="['/']" class="btn btn-primary">Home</a>
 </div>
 
