--- a/projects/host-app/src/app/app.component.html
+++ b/projects/host-app/src/app/app.component.html
@@ -1,9 +1,3 @@
-<div>
-  <h2>{{title}} is running</h2>
-  <a [routerLink]="['/products']" class="btn btn-primary">Products</a>
-  <a [routerLink]="['/carts']" class="btn btn-primary">Carts</a>
-  <a [routerLink]="['/orders']" class="btn btn-primary">Orders</a>
-  <a [routerLink]="['/']" class="btn btn-primary">Home</a>
-</div>
+<app-layout></app-layout>
 
 <router-outlet></router-outlet>
