--- a/projects/carts-app/src/app/carts/carts.component.html
+++ b/projects/carts-app/src/app/carts/carts.component.html
@@ -1,7 +1,7 @@
-<div class="card border-primary mb-3" style="max-width: 20rem;">
+<div class="card border-primary m-3" style="max-width: 20rem;">
     <div class="card-header">Carts</div>
     <div class="card-body">
-      <h4 class="card-title">Primary card title</h4>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <h4 class="card-title">MFE - carts application</h4>
+      <p class="card-text">Micro-frontend example</p>
     </div>
   </div>
